[tool.poetry]
name = "pubmed-fetcher"
version = "0.1.0"
description = "A Python module to fetch and filter PubMed research papers."
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "pubmed_fetcher"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher.main:main"
